[package]
name = "papl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regorus = "0.1"
anyhow = {version = "1.0", features = ["backtrace"] }
serde = {version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = {version = "0.9", optional = true }
lazy_static = "1.4.0"
cedar-policy = "3"